# Async

./: .gitignore  CMakeLists.txt  async.cmake
examples/: CMakeLists.txt  dev_tests.cc  simple_signals.cc
include/async/: box.h  consummer_thread.h  event.h  event_loop.h  eventloop.h  pool.h  queue.h  sequence.h  sequence_loop.h  signal.h  task.h  thread.h  type_traits.h
tests/: CMakeLists.txt  box_tests.cc  event_loop.cc  event_tests.cc  main.cc  pool_tests.cc  sequence_loop_tests.cc  signal_tests.cc
