file( GLOB APP_SOURCES *.cc)
foreach( example_src ${APP_SOURCES} )
    get_filename_component( example_name ${example_src} NAME_WE )
    add_executable( ${example_name} ${example_src})
    target_link_libraries( ${example_name} PUBLIC async )
    target_compile_features(${example_name} PUBLIC cxx_std_17)
endforeach( example_src ${APP_SOURCES} )